[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipDiscovery"
version = "1.0.3"
description = "ipDiscovery is an open-source Python library designed to enhance automation workflows across a wide range of operating systems, including RHEL, SLES, Ubuntu, VMware, Windows, Oracle, and more.By enabling fully automated post-deployment IP discovery."
authors = [
    { name = "Vikas Kumar", email = "fusionvikas.py@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/fusionvikas2015/ipDiscovery.git"
